
syntax = "proto3";

package pizza;

service PizzaService {
  rpc Create(CreatePizza) returns (ResData);
  rpc FindAll(Void) returns (ResDataList);
  rpc FindOne(ById) returns (ResData);
  rpc Delete(ById) returns (ResDataNull);
}

message Void {}

message ById {
    string id = 1;
}

message DisTopp {
  string id = 1;
  string name = 2;
}

message Fact {
  string id = 1;
  int32 calories = 2;
  int32 protein = 3;
  int32 fat = 4;
  int32 carbohydrate = 5;
}

message ITTOption {
  string id = 1;
  string size = 2;
  int32 weight = 3;
  int32 sm = 4;
  int32 price = 5;
  string imageUrl = 6;
  repeated Fact facts = 7;
  string createAt = 8;
  string updateAt = 9;
}

message CreatePizza {
  string name = 1;
  string description = 2;
  int32 price = 3;
  string imageUrl = 4;
  int32 fixedprice = 5;
  repeated string disavailabletoppings = 6;
  bool vegetarian = 7;
  bool pepper = 8; 
  repeated string topping = 9;
}

message IMeta {
  int32 statusCode = 1;
  string message = 2;
}

message Data {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
  string imageUrl = 5;
  int32 fixedprice = 6;
  repeated DisTopp disavailabletoppings = 7;
  bool vegetarian = 8;
  bool pepper = 9;
  repeated ITTOption variants = 10;
  repeated string topping = 11;
  string createAt = 12;
  string updateAt = 13;
}

message ResDataList {
  IMeta meta = 1;
  repeated Data data = 2;
}

message ResData {
  IMeta meta = 1;
  Data data = 2;
}

message ResDataNull {
    IMeta meta = 1;
    Void data = 2;
}